--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,11 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   # For State Management
-  get: ^4.6.3
+  get:
 
   # For Location
-  geolocator: ^11.0.0
-  geocoding: ^3.0.0
+  geolocator:
+  geocoding:
 
   # To format date
   intl:
@@ -51,6 +51,9 @@ dependencies:
 
   # For http requests
   http:
+
+  # For Google Place Api
+#  flutter_google_places_sdk:
 
 dev_dependencies:
   flutter_test:
